[tool.poetry]
name = "scotus"
version = "0.1.0"
description = ""
authors = ["Nathan Bick <nathankbick1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.20.0"
openai = "^0.27.3"
llama-index = "^0.5.6"
pathlib = "^1.0.1"
gpt-index = "^0.5.6"
langchain = "^0.0.130"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
